prepare template for training. Need to finalize code for it and create DataSet / DataLoader

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "general":{
         "w":20,
-        "p_w":1
+        "p_w":1,
+        "epochs":100
     },
     "methods":{"algs":["deepant"]},
     "algos":{
