--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
         "learning_rate":0.01,
         "train_size":0.8,
         "batch_size":64,
-        "data_file":"data.csv"
+        "data_file":"data.csv",
+        "models":"./Models/"
     },
     "methods":{"algs":["deepant"]},
     "algos":{
