--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
             "nb_filters":32,
             "kernel_size_conv":3,
             "kernel_size_pool":2,
-            "accuracy":"MAE"
+            "loss":"MAE"
         }
     }
 }
